--- a/videolibrary/src/main/res/layout/fragment_video_crop.xml
+++ b/videolibrary/src/main/res/layout/fragment_video_crop.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/video_page_background">
 
-    <!-- 视频显示页面 -->
+    <!-- Video display page -->
     <LinearLayout
         android:id="@+id/layout_video"
         android:layout_width="match_parent"
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <!-- 速度选择条 -->
+    <!-- speed selection bar -->
     <com.cgfay.video.widget.VideoSpeedLevelBar
         android:id="@+id/video_crop_speed_bar"
         android:layout_width="@dimen/dp200"
@@ -60,7 +60,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <!-- 裁剪缩略图 -->
+    <!-- Crop Thumbnail -->
     <com.cgfay.video.widget.VideoCutViewBar
         android:id="@+id/video_crop_view_bar"
         android:layout_width="match_parent"
@@ -72,7 +72,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <!-- 缩略图/倍速播放 -->
+    <!-- Thumbnail/double speed playback -->
     <LinearLayout
         android:id="@+id/layout_speed"
         android:layout_width="match_parent"
@@ -93,7 +93,7 @@
             android:layout_marginEnd="@dimen/dp10"
             android:textColor="@color/white"
             android:textSize="12dp"
-            android:text="已选中15.0s"
+            android:text="Select 15.0s"
             android:textStyle="bold"/>
         <ImageView
             android:id="@+id/tv_video_cut_speed_bar_visible"
@@ -111,7 +111,7 @@
             android:background="@drawable/icon_video_cut_rotate" />
     </LinearLayout>
 
-    <!-- 合成进度 -->
+    <!-- Synthesis progress -->
     <LinearLayout
         android:id="@+id/layout_progress"
         android:layout_width="wrap_content"
