--- a/videolibrary/src/main/res/layout/fragment_video_edit.xml
+++ b/videolibrary/src/main/res/layout/fragment_video_edit.xml
@@ -35,19 +35,19 @@
                 android:visibility="gone"/>
         </RelativeLayout>
 
-        <!-- 特效显示 -->
+        <!-- special effects display -->
         <LinearLayout
             android:id="@+id/layout_effect"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp200"
             android:orientation="vertical"
             android:layout_marginBottom="-200dp">
-            <!-- 进度条显示 -->
+            <!-- progress bar display -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp30"
                 android:orientation="horizontal">
-                <!-- 当前播放位置 -->
+                <!-- current playback position -->
                 <TextView
                     android:id="@+id/tv_video_current"
                     android:layout_width="wrap_content"
@@ -59,14 +59,14 @@
                     android:textColor="@color/white"
                     android:text="00:00"/>
 
-                <!-- 带特效选中的进度条 -->
+                <!-- Progress bar with special effects selected -->
                 <com.cgfay.video.widget.EffectSelectedSeekBar
                     android:id="@+id/sb_select_effect"
                     android:layout_width="0dp"
                     android:layout_height="28dp"
                     android:layout_weight="1"/>
 
-                <!-- 文件时长 -->
+                <!-- file duration -->
                 <TextView
                     android:id="@+id/tv_video_duration"
                     android:layout_width="wrap_content"
@@ -80,14 +80,14 @@
 
             </LinearLayout>
 
-            <!--特效提示/撤销栏 -->
+            <!--Effect prompt/undo bar -->
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp30">
                 <TextView
                     android:id="@+id/tv_video_edit_effect_tips"
                     android:layout_width="wrap_content"
-                    android:layout_height="14dp"
+                    android:layout_height="16dp"
                     android:layout_marginStart="@dimen/dp20"
                     android:layout_centerVertical="true"
                     android:textSize="12sp"
@@ -108,14 +108,14 @@
                     android:visibility="gone"/>
             </RelativeLayout>
 
-            <!-- 特效列表 -->
+            <!-- Effect list -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_video_edit_effect"
                 android:layout_width="match_parent"
                 android:layout_height="92dp">
             </androidx.recyclerview.widget.RecyclerView>
 
-            <!-- 特效分类栏 -->
+            <!-- Special effects category -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_video_edit_effect_category"
                 android:layout_width="match_parent"
@@ -171,7 +171,7 @@
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- 顶部子控制栏 -->
+    <!-- top sub control bar -->
     <RelativeLayout
         android:id="@+id/layout_sub_top"
         android:layout_width="match_parent"
@@ -182,7 +182,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <!-- 取消 -->
+        <!-- Cancel -->
         <Button
             android:id="@+id/btn_sub_cancel"
             android:layout_width="wrap_content"
@@ -195,7 +195,7 @@
             android:textColor="@color/white"
             android:text="@string/video_edit_cancel"/>
 
-        <!-- 保存 -->
+        <!-- keep -->
         <Button
             android:id="@+id/btn_sub_save"
             android:layout_width="wrap_content"
@@ -209,7 +209,7 @@
             android:text="@string/video_edit_save"/>
     </RelativeLayout>
 
-    <!-- 底部控制栏 -->
+    <!-- Bottom control bar -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_bottom"
         android:layout_width="match_parent"
@@ -241,7 +241,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
 
-            <!-- 选音乐 -->
+            <!-- choose music -->
             <LinearLayout
                 android:id="@+id/btn_select_music"
                 android:layout_width="0dp"
@@ -261,7 +261,7 @@
                     android:textSize="@dimen/dp12"/>
             </LinearLayout>
 
-            <!-- 特效 -->
+            <!-- special effects -->
             <LinearLayout
                 android:id="@+id/btn_edit_effect"
                 android:layout_width="0dp"
@@ -282,7 +282,7 @@
                     android:textSize="@dimen/dp12"/>
             </LinearLayout>
 
-            <!-- 文字 -->
+            <!-- letter -->
             <LinearLayout
                 android:id="@+id/btn_edit_text"
                 android:layout_width="0dp"
@@ -305,7 +305,7 @@
                     android:textSize="@dimen/dp12"/>
             </LinearLayout>
 
-            <!-- 贴纸 -->
+            <!-- sticker -->
             <LinearLayout
                 android:id="@+id/btn_edit_stickers"
                 android:layout_width="0dp"
@@ -327,7 +327,7 @@
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- 底部子选择栏 -->
+    <!-- Bottom sub-selection bar -->
     <FrameLayout
         android:id="@+id/layout_sub_bottom"
         android:layout_width="match_parent"
